[project]
name = "forestmq"
version = "0.0.1"
description = ""
authors = [
    {name = "joegasewicz",email = "joegasewicz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "forestmq", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pylint = "^4.0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
